--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -72,6 +71,23 @@
           Kirim
         </button>
       </form>
+    </div>
+  </section>
+
+  <section class="text-center px-6 py-24 bg-green-100">
+    <h2 class="text-3xl font-semibold mb-6">Video Mengenai Kebun Binatang Nusantara</h2>
+    <div class="max-w-3xl mx-auto">
+      <div class="relative" style="padding-bottom: 56.25%; height: 0; overflow: hidden; margin-top: 30px; border-radius: 10px;">
+        <iframe 
+          src="https://www.youtube.com/embed/-sMwnkGzwRc?si=0KgYTKc7OGrHkVLd" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+        </iframe>
+      </div>
     </div>
   </section>
 
