--- a/index.html
+++ b/index.html
@@ -91,6 +91,23 @@
     </div>
   </section>
 
+  <section class="text-center px-6 py-24 bg-green-100">
+    <h2 class="text-3xl font-semibold mb-6">Lokasi Kami</h2>
+    <div class="max-w-3xl mx-auto">
+      <div class="relative" style="padding-bottom: 56.25%; height: 0; overflow: hidden; margin-top: 30px; border-radius: 10px;">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.8648084495285!2d110.3979883!3d-7.804133700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57196b21a901%3A0x77e3f6112577fb0f!2sGembira%20Loka%20Zoo%20Yogyakarta!5e0!3m2!1sen!2sid!4v1747219854397!5m2!1sen!2sid" 
+          width="600" 
+          height="450" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+    </div>
+  </section>
+
   <footer class="text-center py-6 text-green-600 text-sm bg-white">
     &copy; 2025 Kebun Binatang Nusantara. Semua hak dilindungi.
   </footer>
